Finished visibility specification. Added syntax fixtures. Embedded select2.

--- a/pastebin/index/static/css/pastebin.css
+++ b/pastebin/index/static/css/pastebin.css
@@ -31,3 +31,7 @@ header {
     height: 30px;
     width: 100%;
 }
+
+form .helptext {
+    display: none;
+}
