--- a/pastebin/index/static/css/select2.foundation.css
+++ b/pastebin/index/static/css/select2.foundation.css
@@ -607,3 +607,7 @@ disabled look for disabled choices in the results dropdown
 	  background-position: 100% -21px !important;
   }
 }
+
+.select2-selection--multiple {
+	border: 1px solid #ddd !important;
+}
